# WebSocket-Messenger

./: main.py  pyproject.toml
templates/: index.html
